--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "sonner": "^1.5.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.11.0",
