--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "swr": "^2.2.5"
